# -monitor_bot

./: Cargo.toml  Dockerfile  README.md
src/: bot.rs  lib.rs  main.rs  notify.rs  tls_dns.rs
src/monitor/: mem.rs
