[package]
name = "monitor_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-lock = "3"
byte-unit = "5"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
humantime = "2"
procfs = "0.16"
teloxide = { version = "0.12", default-features = false, features = ["rustls", "auto-send", "macros"] }
tokio = { version = "1", features = ["macros", "rt", "time"] }
tracing = "0.1"
tracing-subscriber = "0.3"
trait-variant = "0.1"
